--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
@@ -26,11 +26,14 @@
   "scripts": {
     "compile": "yarn hardhat compile",
     "deploy": "yarn hardhat deploy",
-    "deploy:goerli": "yarn hardhat deploy --network goerli",
+    "deploy:staging": "yarn hardhat deploy --network goerli",
     "test": "yarn hardhat test",
     "test:staging": "yarn hardhat test --network goerli",
     "lint": "yarn solhint 'contracts/*.sol'",
     "format": "yarn prettier --write",
     "coverage": "yarn hardhat coverage"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.9.3"
   }
 }
